--- a/learn/lean-lang/2026-01-27.md
+++ b/learn/lean-lang/2026-01-27.md
@@ -1,4 +1,22 @@
+ interactive theorem prover based on dependent type theory
+
+---
+
+## toolset
+
+`elan` for compiler toolchains
+`lake` for dependency
+`lean` compiler
+
+---
+
+
 ## install
 
 lean is installed using vs code extension.
 
+---
+
+https://lean-lang.org/fro/
+
+https://lean-lang.org/learn/
